Fix consumer count issues and remove unused risk_calculation_queue
- Fixed multiple consumer creation in error-generators/queue-killer.sh (changed from 2 to 1 consumer)
- Fixed multiple consumer creation in scripts/bootstrap-chaos-environment.sh
- Fixed syntax error in error-generators/cross-vpn-bridge-killer.sh
- Removed unused risk_calculation_queue from all configuration files
- Removed unused RISK_CALCULATOR_USER from .env and .env.template
- Updated queue-manager.sh to only manage active queues
- Updated cleanup-excess-consumers.sh with proper consumer limits
- Set cross_market_data_queue to 0 SDKPerf consumers (bridge client only)
- Updated terraform configuration to remove unused queue and user
- Updated README.md to reflect queue changes

Changes ensure proper exclusive queue behavior with 1 consumer per queue max

--- a/.env.template
+++ b/.env.template
@@ -15,10 +15,10 @@ MARKET_DATA_CONSUMER_USER=market-consumer@default
 MARKET_DATA_CONSUMER_PASSWORD=market_consumer_pass
 INTEGRATION_USER=integration-feed@default
 INTEGRATION_PASSWORD=integration_pass
-RISK_CALCULATOR_USER=risk-calculator@default
-RISK_CALCULATOR_PASSWORD=risk_calc_pass
 RESTRICTED_MARKET_USER=restricted-market@default
 RESTRICTED_MARKET_PASSWORD=restricted_market_pass
+MARKET_CONSUMER_USER=market-consumer@default
+MARKET_CONSUMER_PASSWORD=market_consumer_pass
 
 # TRADING-VPN Users (Order processing and settlement)
 ORDER_ROUTER_USER=order-router@trading-vpn
@@ -41,7 +41,7 @@ ENABLE_CROSS_VPN_BRIDGE=false
 # Download SDKPerf ZIP file to ./sdkperf-tools/ directory before running bootstrap
 SDKPERF_TOOLS_DIR=./sdkperf-tools
 SDKPERF_EXTRACT_DIR=./sdkperf-tools/extracted
-SDKPERF_SCRIPT_PATH=./sdkperf-tools/extracted/sdkperf_java.sh
+SDKPERF_SCRIPT_PATH=./sdkperf-tools/extracted/sdkperf-jcsmp-8.4.19.7/sdkperf_java.sh
 
 # Terraform Configuration (AUTO-INSTALLED if missing)
 TF_VAR_solace_broker_url=${SOLACE_SEMP_URL}
@@ -49,6 +49,13 @@ TF_VAR_solace_admin_user=${SOLACE_ADMIN_USER}
 TF_VAR_solace_admin_password=${SOLACE_ADMIN_PASSWORD}
 TF_VAR_enable_cross_vpn_bridge=${ENABLE_CROSS_VPN_BRIDGE}
 TERRAFORM_AUTO_APPROVE=true
+
+# Rate configuration (msg/sec)
+WEEKDAY_RATE=1000
+WEEKDAY_MARKET_DATA_RATE=1000
+WEEKEND_MARKET_DATA_RATE=10
+WEEKDAY_TRADE_FLOW_RATE=500
+WEEKEND_TRADE_FLOW_RATE=5
 
 # Infrastructure Configuration
 SETUP_VPNS=true
@@ -61,9 +68,6 @@ VALIDATE_CONNECTIVITY=true
 SDKPERF_BASE_LOG_PATH=./logs
 AUTO_CREATE_LOG_DIRS=true
 
-# Weekend Configuration
-WEEKEND_MODE_ENABLED=true
-WEEKEND_MARKET_DATA_RATE=10
-WEEKEND_TRADE_FLOW_RATE=5
-WEEKDAY_MARKET_DATA_RATE=1000
-WEEKDAY_TRADE_FLOW_RATE=500
+# Consumer Configuration (for exclusive queues - max 1 consumer per queue)
+MAX_CONSUMERS_PER_QUEUE=1
+DEFAULT_DRAIN_CONSUMERS=1
