Update templates with periodic consumer cleanup configuration
- Added HEALTH_CHECK_INTERVAL and CONSUMER_CLEANUP_FREQUENCY to .env.template
- Updated .env with new orchestrator configuration variables
- Modified master-chaos.sh to use configurable environment variables
- Updated bootstrap-chaos-environment.sh template with periodic cleanup
- Made cleanup frequency and health check interval user-configurable

Templates now match the enhanced master orchestrator functionality

--- a/.env.template
+++ b/.env.template
@@ -71,3 +71,7 @@ AUTO_CREATE_LOG_DIRS=true
 # Consumer Configuration (for exclusive queues - max 1 consumer per queue)
 MAX_CONSUMERS_PER_QUEUE=1
 DEFAULT_DRAIN_CONSUMERS=1
+
+# Master Orchestrator Configuration
+HEALTH_CHECK_INTERVAL=300      # Health check interval in seconds (5 minutes)
+CONSUMER_CLEANUP_FREQUENCY=10  # Consumer cleanup frequency (every 10 health checks)
