--- a/.env.template
+++ b/.env.template
@@ -73,5 +73,7 @@ MAX_CONSUMERS_PER_QUEUE=1
 DEFAULT_DRAIN_CONSUMERS=1
 
 # Master Orchestrator Configuration
-HEALTH_CHECK_INTERVAL=300      # Health check interval in seconds (5 minutes)
-CONSUMER_CLEANUP_FREQUENCY=10  # Consumer cleanup frequency (every 10 health checks)
+# Health check interval in seconds (5 minutes)
+HEALTH_CHECK_INTERVAL=300
+# Consumer cleanup frequency (every 10 health checks)
+CONSUMER_CLEANUP_FREQUENCY=10
