Document frequency controls in .env.template
Add documentation for new frequency configuration variables:
- TRAFFIC_RESTART_INTERVAL: Control traffic generator restart cycles
- QUEUE_KILLER_CYCLE_INTERVAL: Control queue attack frequency
- BRIDGE_ATTACK_DURATION: Control bridge stress test duration
- BRIDGE_SLEEP_INTERVAL: Control delay between bridge attacks
- ORCHESTRATOR_SLEEP_INTERVAL: Control main loop sleep
- LOG_TRIM_FREQUENCY: Control log trimming frequency
- LOG_MAX_SIZE_MB: Control log size threshold
- SOLACE_BROKER_TYPE: Control broker type detection

Includes recommended values for less intrusive testing.

--- a/.env.template
+++ b/.env.template
@@ -77,3 +77,34 @@ DEFAULT_DRAIN_CONSUMERS=1
 HEALTH_CHECK_INTERVAL=300
 # Consumer cleanup frequency (every 10 health checks)
 CONSUMER_CLEANUP_FREQUENCY=10
+
+# Log Trimming Configuration
+# Trim logs every N health checks (default: 5 = ~25 minutes)
+LOG_TRIM_FREQUENCY=5
+# Maximum log file size in MB before trimming (default: 50MB)
+LOG_MAX_SIZE_MB=50
+
+# Broker Type Configuration
+# Options: 'software', 'appliance', or 'auto' (default: auto-detect via SEMP)
+SOLACE_BROKER_TYPE=auto
+
+# Frequency Configuration (to reduce chaos testing noise)
+# Traffic generator restart interval in seconds (default: 3600 = 1 hour)
+# Recommended for less noise: 7200 (2 hours) or 14400 (4 hours)
+TRAFFIC_RESTART_INTERVAL=3600
+
+# Queue killer attack cycle interval in seconds (default: 3600 = 1 hour)
+# Recommended for less noise: 7200 (2 hours) or 14400 (4 hours)
+QUEUE_KILLER_CYCLE_INTERVAL=3600
+
+# Bridge attack duration in seconds (default: 600 = 10 minutes)
+# Recommended for less noise: 300 (5 minutes)
+BRIDGE_ATTACK_DURATION=600
+
+# Bridge sleep interval between attacks in seconds (default: 300 = 5 minutes)
+# Recommended for less noise: 900 (15 minutes) or 1800 (30 minutes)
+BRIDGE_SLEEP_INTERVAL=300
+
+# Orchestrator main loop sleep interval in seconds (default: 30)
+# Reduce for faster health checks, increase to reduce CPU usage
+ORCHESTRATOR_SLEEP_INTERVAL=30
