Rename VPNs: default -> market_data, trading-vpn -> trading
BREAKING CHANGE: VPN architecture updated to use custom VPN names

- Create market_data VPN (replaces use of default VPN)
- Rename trading-vpn to trading for consistency
- Update all Terraform configurations (base, software, appliance)
- Update all user credentials with new VPN suffixes:
  * @default users now use @market_data
  * @trading-vpn users now use @trading
- Update all scripts and error generators
- Update documentation to reflect new architecture
- Update queue-manager, bootstrap, and cleanup scripts

This change ensures both VPNs are explicitly created and managed,
rather than relying on the pre-existing default VPN.

--- a/.env.template
+++ b/.env.template
@@ -8,31 +8,31 @@ SOLACE_SEMP_URL=https://your_broker_host_here:1943
 SOLACE_ADMIN_USER=admin
 SOLACE_ADMIN_PASSWORD=your_admin_password_here
 
-# DEFAULT VPN Users (Market data and integration)
-MARKET_DATA_FEED_USER=market-feed@default
+# MARKET_DATA VPN Users (Market data and integration)
+MARKET_DATA_FEED_USER=market-feed@market_data
 MARKET_DATA_FEED_PASSWORD=market_feed_pass
-MARKET_DATA_CONSUMER_USER=market-consumer@default
+MARKET_DATA_CONSUMER_USER=market-consumer@market_data
 MARKET_DATA_CONSUMER_PASSWORD=market_consumer_pass
-INTEGRATION_USER=integration-feed@default
+INTEGRATION_USER=integration-feed@market_data
 INTEGRATION_PASSWORD=integration_pass
-RESTRICTED_MARKET_USER=restricted-market@default
+RESTRICTED_MARKET_USER=restricted-market@market_data
 RESTRICTED_MARKET_PASSWORD=restricted_market_pass
-MARKET_CONSUMER_USER=market-consumer@default
+MARKET_CONSUMER_USER=market-consumer@market_data
 MARKET_CONSUMER_PASSWORD=market_consumer_pass
 
-# TRADING-VPN Users (Order processing and settlement)
-ORDER_ROUTER_USER=order-router@trading-vpn
+# TRADING VPN Users (Order processing and settlement)
+ORDER_ROUTER_USER=order-router@trading
 ORDER_ROUTER_PASSWORD=order_router_pass
-TRADE_PROCESSOR_USER=trade-processor@trading-vpn
+TRADE_PROCESSOR_USER=trade-processor@trading
 TRADE_PROCESSOR_PASSWORD=trade_processor_pass
-CHAOS_GENERATOR_USER=chaos-generator@trading-vpn
+CHAOS_GENERATOR_USER=chaos-generator@trading
 CHAOS_GENERATOR_PASSWORD=chaos_generator_pass
-RESTRICTED_TRADE_USER=restricted-trade@trading-vpn
+RESTRICTED_TRADE_USER=restricted-trade@trading
 RESTRICTED_TRADE_PASSWORD=restricted_trade_pass
 
 # VPN Configuration
-MARKET_DATA_VPN=default
-TRADING_VPN=trading-vpn
+MARKET_DATA_VPN=market_data
+TRADING_VPN=trading
 
 # Cross-VPN Bridge Configuration (disabled for simplified setup)
 ENABLE_CROSS_VPN_BRIDGE=false
