Add SEMP API provisioning as alternative to Terraform
- Add scripts/semp-lib.sh: Reusable SEMP API helper functions
  - semp_post, semp_get, semp_delete with error handling
  - BSD-compatible response parsing (sed vs head)

- Add scripts/semp-provision.sh: Full provisioning implementation
  - Create/delete/verify operations for all resources
  - Bridge support with virtual router handling
  - System resource filtering (#client-username, etc)
  - Reverse dependency order for clean deletion

- scripts/bootstrap-chaos-environment.sh:
  - Add interactive provisioning method selection
  - Add deploy_via_semp() function
  - Conditional terraform setup based on PROVISIONING_METHOD

- scripts/full-cleanup.sh: Route to SEMP or Terraform cleanup
- scripts/load-env.sh: Fix comment handling (set -a/source pattern)
- .env.template: Add PROVISIONING_METHOD variable documentation

Resolves SEMP API version incompatibility (2.25.0 vs 2.33.0)

--- a/.env.template
+++ b/.env.template
@@ -88,6 +88,13 @@ LOG_MAX_SIZE_MB=50
 # Options: 'software', 'appliance', or 'auto' (default: auto-detect via SEMP)
 SOLACE_BROKER_TYPE=auto
 
+# Infrastructure Provisioning Method
+# Options: 'semp', 'terraform', or 'auto'
+# - auto: Prompt during bootstrap (recommended for first run)
+# - semp: Use SEMP API directly (no Terraform required, avoids version issues)
+# - terraform: Use Terraform for infrastructure as code
+PROVISIONING_METHOD=auto
+
 # Frequency Configuration (to reduce chaos testing noise)
 # Traffic generator restart interval in seconds (default: 3600 = 1 hour)
 # Recommended for less noise: 7200 (2 hours) or 14400 (4 hours)
